// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cluster settings should render the cluster settings 1`] = `
<div>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <h2
        class="euiTitle euiTitle--small"
      >
        Main settings
      </h2>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <span>
          <div
            class="euiPopover euiPopover--anchorDownCenter"
            id="show-help"
          >
            <div
              class="euiPopover__anchor"
            >
              <button
                class="euiButtonEmpty euiButtonEmpty--primary"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonContent__icon"
                    color="inherit"
                    data-euiicon-type="questionInCircle"
                  />
                  <span
                    class="euiButtonEmpty__text"
                  />
                </span>
              </button>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--xs"
  />
  <hr
    class="euiHorizontalRule euiHorizontalRule--full"
    style="margin-bottom: 16px;"
  />
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <h2
        class="euiTitle euiTitle--small"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
      />
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--xs"
  />
  <div
    class="euiSpacer euiSpacer--s"
  />
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <div
        style="display: flex; align-items: center; flex-direction: row;"
      >
        <div
          style="justify-self: flex-end; margin: 1em; width: 35%;"
        >
          <div
            class="euiTextAlign euiTextAlign--right"
          >
            Cluster status
          </div>
        </div>
        <div
          style="width: 65%;"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--readOnly"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText"
                data-testid="cluster-status"
                readonly=""
                type="text"
                value="enabled"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        style="display: flex; align-items: center; flex-direction: row;"
      >
        <div
          style="justify-self: flex-end; margin: 1em; width: 35%;"
        >
          <div
            class="euiTextAlign euiTextAlign--right"
          >
            Cluster name
          </div>
        </div>
        <div
          style="width: 65%;"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--readOnly"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText"
                data-testid="cluster-name"
                readonly=""
                type="text"
                value="wazuh1"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        style="display: flex; align-items: center; flex-direction: row;"
      >
        <div
          style="justify-self: flex-end; margin: 1em; width: 35%;"
        >
          <div
            class="euiTextAlign euiTextAlign--right"
          >
            Node name
          </div>
        </div>
        <div
          style="width: 65%;"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--readOnly"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText"
                data-testid="node-name"
                readonly=""
                type="text"
                value="master"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        style="display: flex; align-items: center; flex-direction: row;"
      >
        <div
          style="justify-self: flex-end; margin: 1em; width: 35%;"
        >
          <div
            class="euiTextAlign euiTextAlign--right"
          >
            Node type
          </div>
        </div>
        <div
          style="width: 65%;"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--readOnly"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText"
                data-testid="node-type"
                readonly=""
                type="text"
                value="master"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        style="display: flex; align-items: center; flex-direction: row;"
      >
        <div
          style="justify-self: flex-end; margin: 1em; width: 35%;"
        >
          <div
            class="euiTextAlign euiTextAlign--right"
          >
            Master node IP address
          </div>
        </div>
        <div
          style="width: 65%;"
        >
          <ul>
            <li>
              <div
                class="euiFormControlLayout euiFormControlLayout--readOnly"
              >
                <div
                  class="euiFormControlLayout__childrenWrapper"
                >
                  <input
                    class="euiFieldText"
                    readonly=""
                    type="text"
                    value="0.0.0.0"
                  />
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        style="display: flex; align-items: center; flex-direction: row;"
      >
        <div
          style="justify-self: flex-end; margin: 1em; width: 35%;"
        >
          <div
            class="euiTextAlign euiTextAlign--right"
          >
            Port to listen to cluster communications
          </div>
        </div>
        <div
          style="width: 65%;"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--readOnly"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText"
                data-testid="port-to-listen-to-cluster-communications"
                readonly=""
                type="text"
                value="1516"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        style="display: flex; align-items: center; flex-direction: row;"
      >
        <div
          style="justify-self: flex-end; margin: 1em; width: 35%;"
        >
          <div
            class="euiTextAlign euiTextAlign--right"
          >
            IP address to listen to cluster communications
          </div>
        </div>
        <div
          style="width: 65%;"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--readOnly"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText"
                data-testid="ip-address-to-listen-to-cluster-communications"
                readonly=""
                type="text"
                value="0.0.0.0"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        style="display: flex; align-items: center; flex-direction: row;"
      >
        <div
          style="justify-self: flex-end; margin: 1em; width: 35%;"
        >
          <div
            class="euiTextAlign euiTextAlign--right"
          >
            Hide cluster information in alerts
          </div>
        </div>
        <div
          style="width: 65%;"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--readOnly"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText"
                data-testid="hide-cluster-information-in-alerts"
                readonly=""
                type="text"
                value="no"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
    </div>
  </div>
</div>
`;

exports[`Cluster settings should render the cluster settings with HAProxy helper 1`] = `
<div>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <h2
        class="euiTitle euiTitle--small"
      >
        Main settings
      </h2>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <span>
          <div
            class="euiPopover euiPopover--anchorDownCenter"
            id="show-help"
          >
            <div
              class="euiPopover__anchor"
            >
              <button
                class="euiButtonEmpty euiButtonEmpty--primary"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonContent__icon"
                    color="inherit"
                    data-euiicon-type="questionInCircle"
                  />
                  <span
                    class="euiButtonEmpty__text"
                  />
                </span>
              </button>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--xs"
  />
  <hr
    class="euiHorizontalRule euiHorizontalRule--full"
    style="margin-bottom: 16px;"
  />
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <h2
        class="euiTitle euiTitle--small"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
      />
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--xs"
  />
  <div
    class="euiSpacer euiSpacer--s"
  />
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <div
        style="display: flex; align-items: center; flex-direction: row;"
      >
        <div
          style="justify-self: flex-end; margin: 1em; width: 35%;"
        >
          <div
            class="euiTextAlign euiTextAlign--right"
          >
            Cluster status
          </div>
        </div>
        <div
          style="width: 65%;"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--readOnly"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText"
                data-testid="cluster-status"
                readonly=""
                type="text"
                value="enabled"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        style="display: flex; align-items: center; flex-direction: row;"
      >
        <div
          style="justify-self: flex-end; margin: 1em; width: 35%;"
        >
          <div
            class="euiTextAlign euiTextAlign--right"
          >
            Cluster name
          </div>
        </div>
        <div
          style="width: 65%;"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--readOnly"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText"
                data-testid="cluster-name"
                readonly=""
                type="text"
                value="wazuh1"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        style="display: flex; align-items: center; flex-direction: row;"
      >
        <div
          style="justify-self: flex-end; margin: 1em; width: 35%;"
        >
          <div
            class="euiTextAlign euiTextAlign--right"
          >
            Node name
          </div>
        </div>
        <div
          style="width: 65%;"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--readOnly"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText"
                data-testid="node-name"
                readonly=""
                type="text"
                value="master"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        style="display: flex; align-items: center; flex-direction: row;"
      >
        <div
          style="justify-self: flex-end; margin: 1em; width: 35%;"
        >
          <div
            class="euiTextAlign euiTextAlign--right"
          >
            Node type
          </div>
        </div>
        <div
          style="width: 65%;"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--readOnly"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText"
                data-testid="node-type"
                readonly=""
                type="text"
                value="master"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        style="display: flex; align-items: center; flex-direction: row;"
      >
        <div
          style="justify-self: flex-end; margin: 1em; width: 35%;"
        >
          <div
            class="euiTextAlign euiTextAlign--right"
          >
            Master node IP address
          </div>
        </div>
        <div
          style="width: 65%;"
        >
          <ul>
            <li>
              <div
                class="euiFormControlLayout euiFormControlLayout--readOnly"
              >
                <div
                  class="euiFormControlLayout__childrenWrapper"
                >
                  <input
                    class="euiFieldText"
                    readonly=""
                    type="text"
                    value="0.0.0.0"
                  />
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        style="display: flex; align-items: center; flex-direction: row;"
      >
        <div
          style="justify-self: flex-end; margin: 1em; width: 35%;"
        >
          <div
            class="euiTextAlign euiTextAlign--right"
          >
            Port to listen to cluster communications
          </div>
        </div>
        <div
          style="width: 65%;"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--readOnly"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText"
                data-testid="port-to-listen-to-cluster-communications"
                readonly=""
                type="text"
                value="1516"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        style="display: flex; align-items: center; flex-direction: row;"
      >
        <div
          style="justify-self: flex-end; margin: 1em; width: 35%;"
        >
          <div
            class="euiTextAlign euiTextAlign--right"
          >
            IP address to listen to cluster communications
          </div>
        </div>
        <div
          style="width: 65%;"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--readOnly"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText"
                data-testid="ip-address-to-listen-to-cluster-communications"
                readonly=""
                type="text"
                value="0.0.0.0"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        style="display: flex; align-items: center; flex-direction: row;"
      >
        <div
          style="justify-self: flex-end; margin: 1em; width: 35%;"
        >
          <div
            class="euiTextAlign euiTextAlign--right"
          >
            Hide cluster information in alerts
          </div>
        </div>
        <div
          style="width: 65%;"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--readOnly"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText"
                data-testid="hide-cluster-information-in-alerts"
                readonly=""
                type="text"
                value="no"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
    </div>
  </div>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <h2
        class="euiTitle euiTitle--small"
      >
        HAProxy settings
      </h2>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
      />
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--xs"
  />
  <hr
    class="euiHorizontalRule euiHorizontalRule--full"
    style="margin-bottom: 16px;"
  />
  <div
    class="euiSpacer euiSpacer--s"
  />
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <div
        style="display: flex; align-items: center; flex-direction: row;"
      >
        <div
          style="justify-self: flex-end; margin: 1em; width: 35%;"
        >
          <div
            class="euiTextAlign euiTextAlign--right"
          >
            HAProxy status
          </div>
        </div>
        <div
          style="width: 65%;"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--readOnly"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText"
                data-testid="haproxy-status"
                readonly=""
                type="text"
                value="enabled"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        style="display: flex; align-items: center; flex-direction: row;"
      >
        <div
          style="justify-self: flex-end; margin: 1em; width: 35%;"
        >
          <div
            class="euiTextAlign euiTextAlign--right"
          >
            Address
          </div>
        </div>
        <div
          style="width: 65%;"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--readOnly"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText"
                data-testid="address"
                readonly=""
                type="text"
                value="wazuh-proxy"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        style="display: flex; align-items: center; flex-direction: row;"
      >
        <div
          style="justify-self: flex-end; margin: 1em; width: 35%;"
        >
          <div
            class="euiTextAlign euiTextAlign--right"
          >
            User
          </div>
        </div>
        <div
          style="width: 65%;"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--readOnly"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText"
                data-testid="user"
                readonly=""
                type="text"
                value="haproxy"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        style="display: flex; align-items: center; flex-direction: row;"
      >
        <div
          style="justify-self: flex-end; margin: 1em; width: 35%;"
        >
          <div
            class="euiTextAlign euiTextAlign--right"
          >
            Password
          </div>
        </div>
        <div
          style="width: 65%;"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--readOnly"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText"
                data-testid="password"
                readonly=""
                type="text"
                value="haproxy"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        style="display: flex; align-items: center; flex-direction: row;"
      >
        <div
          style="justify-self: flex-end; margin: 1em; width: 35%;"
        >
          <div
            class="euiTextAlign euiTextAlign--right"
          >
            Port
          </div>
        </div>
        <div
          style="width: 65%;"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--readOnly"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText"
                data-testid="port"
                readonly=""
                type="text"
                value="5555"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        style="display: flex; align-items: center; flex-direction: row;"
      >
        <div
          style="justify-self: flex-end; margin: 1em; width: 35%;"
        >
          <div
            class="euiTextAlign euiTextAlign--right"
          >
            Protocol
          </div>
        </div>
        <div
          style="width: 65%;"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--readOnly"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText"
                data-testid="protocol"
                readonly=""
                type="text"
                value="http"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        style="display: flex; align-items: center; flex-direction: row;"
      >
        <div
          style="justify-self: flex-end; margin: 1em; width: 35%;"
        >
          <div
            class="euiTextAlign euiTextAlign--right"
          >
            Backend
          </div>
        </div>
        <div
          style="width: 65%;"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--readOnly"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText"
                data-testid="backend"
                readonly=""
                type="text"
                value="wazuh_cluster"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        style="display: flex; align-items: center; flex-direction: row;"
      >
        <div
          style="justify-self: flex-end; margin: 1em; width: 35%;"
        >
          <div
            class="euiTextAlign euiTextAlign--right"
          >
            Frequency
          </div>
        </div>
        <div
          style="width: 65%;"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--readOnly"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText"
                data-testid="frequency"
                readonly=""
                type="text"
                value="60"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        style="display: flex; align-items: center; flex-direction: row;"
      >
        <div
          style="justify-self: flex-end; margin: 1em; width: 35%;"
        >
          <div
            class="euiTextAlign euiTextAlign--right"
          >
            Agent chunk size
          </div>
        </div>
        <div
          style="width: 65%;"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--readOnly"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText"
                data-testid="agent-chunk-size"
                readonly=""
                type="text"
                value="300"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        style="display: flex; align-items: center; flex-direction: row;"
      >
        <div
          style="justify-self: flex-end; margin: 1em; width: 35%;"
        >
          <div
            class="euiTextAlign euiTextAlign--right"
          >
            Agent reconnection time
          </div>
        </div>
        <div
          style="width: 65%;"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--readOnly"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText"
                data-testid="agent-reconnection-time"
                readonly=""
                type="text"
                value="5"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        style="display: flex; align-items: center; flex-direction: row;"
      >
        <div
          style="justify-self: flex-end; margin: 1em; width: 35%;"
        >
          <div
            class="euiTextAlign euiTextAlign--right"
          >
            Agent reconnection stability time
          </div>
        </div>
        <div
          style="width: 65%;"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--readOnly"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText"
                data-testid="agent-reconnection-stability-time"
                readonly=""
                type="text"
                value="60"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        style="display: flex; align-items: center; flex-direction: row;"
      >
        <div
          style="justify-self: flex-end; margin: 1em; width: 35%;"
        >
          <div
            class="euiTextAlign euiTextAlign--right"
          >
            Imbalance tolerance
          </div>
        </div>
        <div
          style="width: 65%;"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--readOnly"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText"
                data-testid="imbalance-tolerance"
                readonly=""
                type="text"
                value="0.1"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        style="display: flex; align-items: center; flex-direction: row;"
      >
        <div
          style="justify-self: flex-end; margin: 1em; width: 35%;"
        >
          <div
            class="euiTextAlign euiTextAlign--right"
          >
            Remove disconnected node after
          </div>
        </div>
        <div
          style="width: 65%;"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--readOnly"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText"
                data-testid="remove-disconnected-node-after"
                readonly=""
                type="text"
                value="240"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
    </div>
  </div>
</div>
`;

exports[`Cluster settings should render the error message when the cluster setting is a string 1`] = `
<div>
  <div
    class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        class="euiFlexItem"
      >
        <div
          style="text-align: center;"
        >
          <span
            data-euiicon-type="help"
            style="margin-right: 4px;"
          />
          <span>
            Configuration not available
          </span>
          <div
            class="euiPopover euiPopover--anchorDownCenter"
            id="show-help"
          >
            <div
              class="euiPopover__anchor"
            >
              <button
                class="euiButtonEmpty euiButtonEmpty--primary"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonContent__icon"
                    color="inherit"
                    data-euiicon-type="questionInCircle"
                  />
                  <span
                    class="euiButtonEmpty__text"
                  />
                </span>
              </button>
            </div>
          </div>
          <hr
            class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
          />
          <span>
            There was a problem while fetching the configuration for this section. It may be a server problem or the configuration doesn't exist.
          </span>
          <div
            class="euiSpacer euiSpacer--s"
          />
          <div>
            <p>
              Click on the 
              <span
                data-euiicon-type="questionInCircle"
              />
               icon for help. Check the documentation links to learn more about how to configure it.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
